etc/kubernetes/deployments.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dataporten-authengine
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dataporten-authengine
    spec:
      containers:
      - name: dataporten-authengine
        image: eu.gcr.io/turnkey-cocoa-720/dataporten-authengine:1.0.3
        resources:
          requests:
            cpu: 20m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 300Mi
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: dataporten-secrets
          mountPath: "/conf"
          readOnly: true
      volumes:
      - name: dataporten-secrets
        secret:
          secretName: dataporten-authengine
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dataporten-cassandra
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dataporten-cassandra
    spec:
      containers:
        - name: dataporten-cassandra
          image: cassandra:2.2
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 500Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
              name: intra-node
            - containerPort: 7001
              name: tls-intra-node
            - containerPort: 7199
              name: jmx
            - containerPort: 9042
              name: cql
          volumeMounts:
            - mountPath: /var/lib/cassandra
              name: data
      volumes:
        - name: data
          emptyDir: {}
